--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/style.css"> 
     <title>Prework Study Guide</title>
   </head>
   <body>
@@ -19,14 +20,18 @@
           <li>The body element represents the visible content shown to the user.</li>
           <li>HTML attribute defines additional information about an element and
               are always defined in the beginning element, never the closing.</li>
-          <li>HTML attribute example: lang="en", means language for website is English</li>
+          <li>HTML attribute example: lang="en", means language for website is English.</li>
         </ul>
       </section>
  
       <section class="card" id="css-section">
         <h2>CSS</h2>
         <ul>
-          <li>Enter CSS notes here</li>
+          <li>A margin indicates how much space we want around the outside of an element.</li>
+          <li>A padding indicates how much space we want around the content inside an element.</li>
+          <li>When using external file one must use a (link) element to connect it.</li>
+          <li>(rel) attribue indicates the relationship between the current and linked document resource.</li>
+          <li>(href) attribute indicates the location (URL) of the external resource.</li>
         </ul>
  
       </section>
