--- a/index.html
+++ b/index.html
@@ -49,7 +49,10 @@
       <section class="card" id="javascript-section">
         <h2>JavaScript</h2>
         <ul>
-          <li>Enter JavaScript notes here</li>
+          <li>A variable is a named container that allows us to store data in our code.</li>
+          <li>Control flow is the order in which a computer executes code in a script.</li>
+          <li>JavaScript files are executed from top to bottom, so order matters.</li>
+          <li>After defining a function, we must call it in the code in order for it to execute.</li>
         </ul>
  
       </section>
